src/test/ui/bad/bad-expr-lhs.stderr
error[E0070]: invalid left-hand side expression
  --> $DIR/bad-expr-lhs.rs:2:5
   |
LL |     1 = 2;
   |     ^^^^^ left-hand of expression not valid

error[E0067]: invalid left-hand side expression
  --> $DIR/bad-expr-lhs.rs:3:5
   |
LL |     1 += 2;
   |     ^ invalid expression for left-hand side

error[E0070]: invalid left-hand side expression
  --> $DIR/bad-expr-lhs.rs:4:5
   |
LL |     (1, 2) = (3, 4);
   |     ^^^^^^^^^^^^^^^ left-hand of expression not valid

error[E0070]: invalid left-hand side expression
  --> $DIR/bad-expr-lhs.rs:7:5
   |
LL |     (a, b) = (3, 4);
   |     ^^^^^^^^^^^^^^^ left-hand of expression not valid

error[E0070]: invalid left-hand side expression
  --> $DIR/bad-expr-lhs.rs:9:5
   |
LL |     None = Some(3);
   |     ^^^^^^^^^^^^^^ left-hand of expression not valid

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0067, E0070.
For more information about an error, try `rustc --explain E0067`.
